<resources>
    <string name="app_name" translatable="false">TicTacToe</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="p1vsp2" translatable="false">P1 vs P2</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset">Reset</string>
    <string name="draw">Draw</string>
    <string name="friend">Friend</string>
    <string name="total">Total</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="win_percentage">Win %</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="change_user_name">Change username</string>
    <string name="user_name">User Name:</string>
    <string name="email" translatable="false">Email:</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="password">Password:</string>
    <string name="game_frame">Game Frame</string>
    <string name="pos00" translatable="false">Pos00</string>
    <string name="pos01" translatable="false">Pos01</string>
    <string name="pos02" translatable="false">Pos02</string>
    <string name="pos10" translatable="false">Pos10</string>
    <string name="pos11" translatable="false">Pos11</string>
    <string name="pos12" translatable="false">Pos12</string>
    <string name="pos20" translatable="false">Pos20</string>
    <string name="pos21" translatable="false">Pos21</string>
    <string name="pos22" translatable="false">Pos22</string>
    <string name="android_development">This app is created for Android Development Course</string>
    <string name="error_username_empty">Username cannot be empty</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_repeat_password_empty">Repeat Password is not the same</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_email_in_use">Email already in use</string>
    <string name="error_google_sign_in">SignInResult:failed code=</string>
    <string name="message_new_user">New User Added</string>
    <string name="message_successful_sign_out">Signed Out Successfully</string>

</resources>