<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegisterActivity">

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="Username"
        tools:ignore="LabelFor"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintHorizontal_bias="0.65"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />
    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        tools:ignore="LabelFor"
        android:layout_marginBottom="3dp"
        app:layout_constraintTop_toBottomOf="@id/editUsername"
        app:layout_constraintLeft_toLeftOf="@id/editUsername"/>
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        tools:ignore="LabelFor"
        android:layout_marginBottom="3dp"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintLeft_toLeftOf="@id/editEmail" />
    <EditText
        android:id="@+id/editRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="repeat password"
        tools:ignore="LabelFor"
        android:layout_marginBottom="3dp"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintLeft_toLeftOf="@id/editPassword" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        app:layout_constraintBaseline_toBaselineOf="@id/editUsername"
        app:layout_constraintRight_toLeftOf="@id/editUsername" />
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@id/editPassword"
        app:layout_constraintRight_toLeftOf="@id/editPassword" />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBaseline_toBaselineOf="@id/editEmail"
        app:layout_constraintRight_toLeftOf="@id/editEmail" />
    <!--<TextView
        android:id="@+id/repeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@id/editRepeatPassword"
        app:layout_constraintRight_toLeftOf="@id/editRepeatPassword" />-->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editRepeatPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>